# CUDA_freshman

./: CMakeLists.txt  README.md  build.sh
0_hello_world/: hello_world.cu
10_reduce_integer/: CMakeLists.txt  reduce_integer.cu
12_reduce_unrolling/: CMakeLists.txt  reduce_unrolling.cu
14_global_variable/: global_variable.cu
17_memory_demo/: CMakeLists.txt  memory_demo.cu
1_check_dimension/: check_dimension.cu
22_transform_matrix2D/: transform_matrix2D.cu
24_shared_memory_read_data/: shared_memory_read_data.cu
25_reduce_integer_shared_mem/: CMakeLists.txt  reduce_integer_shared_mem.cu
27_stencil_1d_constant_read_only/: CMakeLists.txt  stencil_1d_constant_read_only.cu
28_shfl_test/: shfl_test.cu
2_grid_block/: grid_block.cu
30_stream/: CMakeLists.txt  stream.cu
35_multi_add_depth/: CMakeLists.txt  multi_add_depth.cu
3_sum_arrays/: sum_arrays.cu
4_sum_arrays_timer/: CMakeLists.txt  sum_arrays_timer.cu
5_thread_index/: CMakeLists.txt  thread_index.cu
6_sum_matrix/: sum_matrix.cu
7_device_info/: CMakeLists.txt  device_info.cu
8_divergence/: CMakeLists.txt  divergence.cu
9_sum_matrix2D/: sum_matrix2D.cu
include/: freshman.h
