cmake_minimum_required(VERSION 3.9 FATAL_ERROR)
Project(CUDA_Freshman CXX C CUDA)
set(CMAKE_CUDA_FLAGS "-arch=sm_86 -g -G -O3")
set(CMAKE_CUDA_HOST_COMPILER "/usr/bin/gcc-9")
message(STATUS "Using GCC: ${CMAKE_CUDA_HOST_COMPILER}")

find_package(CUDA REQUIRED)
include_directories(${CUDA_INCLUDE_DIRS})
message(STATUS "CUDA include dirs: ${CUDA_INCLUDE_DIRS}")

include_directories(./include)

add_subdirectory(0_hello_world)
add_subdirectory(1_check_dimension)
add_subdirectory(2_grid_block)
add_subdirectory(3_sum_arrays)
add_subdirectory(4_sum_arrays_timer)
add_subdirectory(5_thread_index)
add_subdirectory(6_sum_matrix)
add_subdirectory(7_device_info)
add_subdirectory(8_divergence)
add_subdirectory(9_sum_matrix2D)
add_subdirectory(10_reduce_integer)
add_subdirectory(12_reduce_unrolling)
add_subdirectory(14_global_variable)
add_subdirectory(17_memory_demo)
add_subdirectory(22_transform_matrix2D)